--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+server.port=8686
+# application.priperties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/spbsecur?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=user01
+spring.datasource.password=1234
 
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# 매핑할 모델의 패키지 경로 (mybatis 매핑 type을 짧게 쓰기 위한 설정)
+mybatis.type-aliases-package=com.hoojsecur.model
+# mapper.xml 위치 명시
+mybatis.config-location=classpath:configuration.xml
+mybatis.mapper-locations=classpath:mappers/*.xml
